compiler/tests/en/errors/immutable.salam
// EXPECT: E013
func main:
    x : int = 5
    x = 10
end
